--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "redirects": [
-    { "source": "/", "destination": "https://og-playground.vercel.app" }
+    { "source": "/", "destination": "https://og-img.hollerdigital.dev" }
   ],
   "rewrites": [
     { "source": "/(.+)", "destination": "/api" }
